<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button49"
        android:layout_width="80dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_number_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button46"
        android:layout_width="80dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_number_5"
        app:layout_constraintBottom_toBottomOf="@+id/button43"
        app:layout_constraintStart_toEndOf="@+id/button43"
        app:layout_constraintTop_toTopOf="@+id/button43" />

    <Button
        android:id="@+id/button47"
        android:layout_width="80dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_number_6"
        app:layout_constraintBottom_toBottomOf="@+id/button46"
        app:layout_constraintStart_toEndOf="@+id/button46"
        app:layout_constraintTop_toTopOf="@+id/button46" />

    <Button
        android:id="@+id/button48"
        android:layout_width="80dp"
        android:layout_height="140dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_number_7"
        app:layout_constraintEnd_toEndOf="@+id/button43"
        app:layout_constraintStart_toStartOf="@+id/button43"
        app:layout_constraintTop_toBottomOf="@+id/button43" />

    <Button
        android:id="@+id/button50"
        android:layout_width="80dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_number_8"
        app:layout_constraintBottom_toBottomOf="@+id/button48"
        app:layout_constraintStart_toEndOf="@+id/button48"
        app:layout_constraintTop_toTopOf="@+id/button48" />

    <Button
        android:id="@+id/button51"
        android:layout_width="80dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_number_9"
        app:layout_constraintBottom_toBottomOf="@+id/button50"
        app:layout_constraintStart_toEndOf="@+id/button50"
        app:layout_constraintTop_toTopOf="@+id/button50" />

    <Button
        android:id="@+id/button52"
        android:layout_width="80dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_number_2"
        app:layout_constraintBottom_toBottomOf="@+id/button49"
        app:layout_constraintStart_toEndOf="@+id/button49"
        app:layout_constraintTop_toTopOf="@+id/button49" />

    <Button
        android:id="@+id/button53"
        android:layout_width="80dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_number_3"
        app:layout_constraintBottom_toBottomOf="@+id/button52"
        app:layout_constraintStart_toEndOf="@+id/button52"
        app:layout_constraintTop_toTopOf="@+id/button52" />

    <Button
        android:id="@+id/button38"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_plus"
        app:layout_constraintBottom_toBottomOf="@+id/button53"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button53"
        app:layout_constraintTop_toTopOf="@+id/button53" />

    <Button
        android:id="@+id/button40"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_equals"
        app:layout_constraintBottom_toBottomOf="@+id/button47"
        app:layout_constraintEnd_toEndOf="@+id/button38"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button47"
        app:layout_constraintTop_toTopOf="@+id/button47" />

    <Button
        android:id="@+id/button37"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_clear"
        app:layout_constraintBottom_toBottomOf="@+id/button41"
        app:layout_constraintEnd_toEndOf="@+id/button40"
        app:layout_constraintStart_toEndOf="@+id/button51"
        app:layout_constraintTop_toTopOf="@+id/button51"
        app:layout_constraintVertical_bias="0.45999998" />

    <Button
        android:id="@+id/button41"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_number_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button51"
        app:layout_constraintStart_toStartOf="@+id/button48"
        app:layout_constraintTop_toBottomOf="@+id/button50" />

    <Button
        android:id="@+id/button43"
        android:layout_width="80dp"
        android:layout_height="140dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_number_4"
        app:layout_constraintEnd_toEndOf="@+id/button49"
        app:layout_constraintStart_toStartOf="@+id/button49"
        app:layout_constraintTop_toBottomOf="@+id/button49" />

</androidx.constraintlayout.widget.ConstraintLayout>