<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        style="?android:attr/buttonBarStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/button_number_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/button_style"
                    android:text="@string/button_number_1"/>

                <Button
                    android:id="@+id/button_number_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/button_style"
                    android:text="@string/button_number_2"/>

                <Button
                    android:id="@+id/button_number_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/button_style"
                    android:text="@string/button_number_3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/button_number_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/button_style"
                    android:text="@string/button_number_4"/>

                <Button
                    android:id="@+id/button_number_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/button_style"
                    android:text="@string/button_number_5"/>

                <Button
                    android:id="@+id/button_number_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_number_6"
                    style="@style/button_style"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/button_number_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_number_6"
                    style="@style/button_style"/>

                <Button
                    android:id="@+id/button_number_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_number_8"
                    style="@style/button_style"/>

                <Button
                    android:id="@+id/button_number_9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_number_9"
                    style="@style/button_style"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_number_0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_number_zero"
            style="@style/button_style"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/button_plus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_plus"
            style="@style/button_style"/>

        <Button
            android:id="@+id/button_minus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_equals"
            style="@style/button_style"/>

        <Button
            android:id="@+id/button_clear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_clear"
            style="@style/button_style"/>

    </LinearLayout>

</LinearLayout>







